--- a/.env.local.example
+++ b/.env.local.example
@@ -13,6 +13,9 @@ LAMASSU_DB_CONNECT_API_KEY=secret
 LAMASSU_BOLT_CLIENT_ID=client
 LAMASSU_BOLT_CLIENT_PASSWORD=secret
 
+# Credentials for Lime
+LAMASSU_LIME_BEARER_TOKEN=secret
+
 # Credentials for Voi
 LAMASSU_VOI_AUTH_URL=http://example.org
 LAMASSU_VOI_CLIENT_ID=user
