--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -254,6 +254,17 @@ lamassu:
       # Note: lime feeds are accessed via proxy, using http instead of https
       url: "http://data.lime.bike/api/partners/v2/gbfs/frankfurt/gbfs.json"
       language: en
+    - systemId: lime_stuttgart
+      operatorId: LME:Operator:lime
+      operatorName: Lime
+      codespace: LMG
+      # Note: lime feeds are accessed via proxy, using http instead of https
+      url: "http://data.lime.bike/api/partners/v2/gbfs_transit/gbfs.json"
+      language: en
+        authentication:
+            scheme: BEARER_TOKEN
+            properties:
+                accessToken: ${LAMASSU_LIME_BEARER_TOKEN}
     ## Nextbike DE
     - systemId: nextbike_df  # Frelo Freiburg
       operatorId: NBK:Operator:nextbike
