--- a/etc/ocpdb/config.yaml
+++ b/etc/ocpdb/config.yaml
@@ -1,6 +1,6 @@
 SHOW_MAP: false
 
-OPENAPI_DESCRIPTION: 'This service tries to collects chargepoint data.'
+OPENAPI_DESCRIPTION: 'This collects chargepoint data.'
 OPENAPI_CONTACT_MAIL: 'mobidatabw-technik@nvbw.de'
 OPENAPI_TOS: 'https://www.mobidata-bw.de/pages/nutzungsbedingungen'
 OPENAPI_SERVERS:
