--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -760,17 +760,17 @@ lamassu:
         scheme: HTTP_HEADERS
         properties:
           Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
-    - systemId: mobility_ch
-      operatorId: MOB:Operator:mobility
-      operatorName: Mobility
-      codespace: MOB
-      # Note: mobility_ch feed is accessed via proxy, using http instead of https 
-      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/mobility/gbfs"
-      language: en
-      authentication:
-        scheme: HTTP_HEADERS
-        properties:
-          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
+#    - systemId: mobility_ch
+#      operatorId: MOB:Operator:mobility
+#      operatorName: Mobility
+#      codespace: MOB
+#      # Note: mobility_ch feed is accessed via proxy, using http instead of https 
+#      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/mobility/gbfs"
+#      language: en
+#      authentication:
+#        scheme: HTTP_HEADERS
+#        properties:
+#          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
     - systemId: edrivecarsharing_ch
       operatorId: EDC:Operator:edrivecarsharing
       operatorName: edrive carsharing
