--- a/etc/ocpdb/config.yaml
+++ b/etc/ocpdb/config.yaml
@@ -40,6 +40,7 @@ LOGGING:
       formatter: human_readable
   loggers:
     webapp:
+      level: INFO
       handlers:
         - split_log_file
         - console_stdout
