--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -116,6 +116,12 @@ lamassu:
       codespace: CAS
       url: "https://app.car-ship.jetzt/gbfs/2.3/gbfs"
       language: de
+    - systemId: stella
+      operatorId: STL:Operator:stella
+      operatorName: stella
+      codespace: STL
+      url: "https://stella.backend.fleetbird.eu/rest/gbfs/v2.2/1/gbfs.json"
+      language: en
     - systemId: regiorad_stuttgart
       operatorId: CAB:Operator:callabike
       operatorName: Call-A-Bike
