ipl-proxy for bolt

--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -350,7 +350,8 @@ lamassu:
       operatorId: BLT:Operator:bolt
       operatorName: Bolt
       codespace: BLT
-      url: "https://mds.bolt.eu/gbfs/2/1352/gbfs"
+      # Note: bolt feeds are accessed via proxy, using http instead of https
+      url: "http://mds.bolt.eu/gbfs/2/1352/gbfs"
       language: en
       authentication:
         scheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
@@ -362,7 +363,8 @@ lamassu:
       operatorId: BLT:Operator:bolt
       operatorName: Bolt
       codespace: BLT
-      url: "https://mds.bolt.eu/gbfs/2/719/gbfs"
+      # Note: bolt feeds are accessed via proxy, using http instead of https
+      url: "http://mds.bolt.eu/gbfs/2/719/gbfs"
       language: en
       authentication:
         scheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
@@ -374,7 +376,8 @@ lamassu:
       operatorId: BLT:Operator:bolt
       operatorName: Bolt
       codespace: BLT
-      url: "https://mds.bolt.eu/gbfs/2/1321/gbfs"
+      # Note: bolt feeds are accessed via proxy, using http instead of https
+      url: "http://mds.bolt.eu/gbfs/2/1321/gbfs"
       language: en
       authentication:
         scheme: OAUTH2_CLIENT_CREDENTIALS_GRANT
