--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -518,12 +518,28 @@ lamassu:
       # Note: bird feeds are accessed via proxy, using http instead of https
       url: "http://mds.bird.co/gbfs/v2/public/basel/gbfs.json"
       language: en
-#    - systemId: bird-biel
-#      operatorId: BRD:Operator:bird
-#      operatorName: bird
-#      codespace: BRD
-#      url: "http://mds.bird.co/gbfs/v2/public/biel/gbfs.json"
-#      language: en
+    - systemId: bird-biel
+      operatorId: BRD:Operator:bird
+      operatorName: bird
+      codespace: BRD
+      # Note: sharedmobility feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/bird-biel/gbfs"
+      language: en
+      authentication:
+        scheme: HTTP_HEADERS
+        properties:
+          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
+    - systemId: bird-grenchen
+      operatorId: BRD:Operator:bird
+      operatorName: bird
+      codespace: BRD
+      # Note: sharedmobility feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/bird-grenchen/gbfs"
+      language: en
+      authentication:
+        scheme: HTTP_HEADERS
+        properties:
+          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
     - systemId: bird-kloten
       operatorId: BRD:Operator:bird
       operatorName: bird
