--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -723,17 +723,17 @@ lamassu:
         properties:
           Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
     ## Pick-e-Bike CH
-    - systemId: pickebike_aubonne
-      operatorId: PEB:Operator:pickebike
-      operatorName: PickeBike
-      codespace: PEB
-      # Note: sharedmobility feeds are accessed via proxy, using http instead of https
-      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/pickebike_aubonne/gbfs"
-      language: en
-      authentication:
-        scheme: HTTP_HEADERS
-        properties:
-          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
+#    - systemId: pickebike_aubonne
+#      operatorId: PEB:Operator:pickebike
+#      operatorName: PickeBike
+#      codespace: PEB
+#      # Note: sharedmobility feeds are accessed via proxy, using http instead of https
+#      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/pickebike_aubonne/gbfs"
+#      language: en
+#      authentication:
+#        scheme: HTTP_HEADERS
+#        properties:
+#          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
     ## Share Birrer CH
     - systemId: share_birrer_ch
       operatorId: SBA:Operator:share_birrer_ag
