--- a/.env
+++ b/.env
@@ -36,6 +36,8 @@ X2GBFS_UPDATE_INTERVAL_SECONDS=60
 
 DEER_API_URL=https://deer.fleetster.de
 
+MIKAR_API_URL=https://mikar.fleetster.de
+
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.12-bullseye
 DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2025-06-06t09-57
