--- a/.env.local.example
+++ b/.env.local.example
@@ -28,6 +28,10 @@ LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION=mail@domain
 DEER_USER=user
 DEER_PASSWORD=password
 
+# User and password from Mikar
+MIKAR_USER=user
+MIKAR_PASSWORD=password
+
 # User and password for Flinkster API
 FLINKSTER_CLIENT_ID=client_id
 FLINKSTER_SECRET=secret
