--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -182,6 +182,9 @@ services:
       - DEER_API_URL
       - DEER_USER=${DEER_USER:?missing/empty}
       - DEER_PASSWORD=${DEER_PASSWORD:?missing/empty}
+      - MIKAR_API_URL
+      - MIKAR_USER=${MIKAR_USER:?missing/empty}
+      - MIKAR_PASSWORD=${MIKAR_PASSWORD:?missing/empty}
       - CANTAMEN_IXSI_API_URL=${CANTAMEN_IXSI_API_URL:?missing/empty}
       - CANTAMEN_IXSI_API_TIMEOUT=${CANTAMEN_IXSI_API_TIMEOUT:?missing/empty}
       - MOQO_API_TOKEN=${MOQO_API_TOKEN:?missing/empty}
