--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -167,6 +167,13 @@ lamassu:
       # Note: doot feeds are accessed via proxy, using http instead of https
       url: "http://gbfs.api.ridedott.com/public/v2/boblingen/gbfs.json"
       language: en
+    - systemId: dott_ellwangen
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOV
+      # Note: doot feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.api.ridedott.com/public/v2/ellwangen/gbfs.json"
+      language: en
     - systemId: dott_friedrichshafen
       operatorId: DOT:Operator:dott
       operatorName: Dott
@@ -222,6 +229,13 @@ lamassu:
       codespace: DOH
       # Note: doot feeds are accessed via proxy, using http instead of https
       url: "http://gbfs.api.ridedott.com/public/v2/reutlingen/gbfs.json"
+      language: en
+    - systemId: dott_schwabisch_gmund
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOW
+      # Note: doot feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.api.ridedott.com/public/v2/schwabisch-gmund/gbfs.json"
       language: en
     - systemId: dott_stuttgart
       operatorId: DOT:Operator:dott
