--- a/.env
+++ b/.env
@@ -40,9 +40,9 @@ MIKAR_API_URL=https://mikar.fleetster.de
 
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.12-bullseye
-DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2025-07-21t15-31
-DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2025-07-21t15-31
-DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2025-07-21t15-31
+DAGSTER_PIPELINE_IMAGE=ghcr.io/mobidata-bw/dagster-pipeline:2025-08-06T08-42
+DAGSTER_DAGIT_IMAGE=ghcr.io/mobidata-bw/dagster-dagit:2025-08-06T08-42
+DAGSTER_DAEMON_IMAGE=ghcr.io/mobidata-bw/dagster-daemon:2025-08-06T08-42
 DAGSTER_POSTGRES_USER=postgres_user
 DAGSTER_POSTGRES_DB=postgres_db
 
