make workers configurable

--- a/.env
+++ b/.env
@@ -115,6 +115,8 @@ OCPDB_PRIVACY_URL=https://www.nvbw.de/datenschutz
 OCPDB_LEGAL_NOTICE_URL=https://www.nvbw.de/impressum
 OCPDB_IMAGE=ghcr.io/binary-butterfly/ocpdb:2.3.0
 OCPDB_DB_IMAGE=postgis/postgis:15-3.4-alpine
+OCPDB_GUNICORN_WORKER_COUNT=16
+OCPDB_CELERY_WORKER_COUNT=2
 
 # ParkAPI
 PARK_API_API_PORT=7500
@@ -124,6 +126,8 @@ PARK_API_POSTGRES_HOST=park-api-db
 PARK_API_CELERY_BROKER_URL=amqp://rabbitmq/park-api
 PARK_API_IMAGE=ghcr.io/parkendd/park-api-v3:0.28.0
 PARK_API_DB_IMAGE=postgis/postgis:15-3.4-alpine
+PARK_API_GUNICORN_WORKER_COUNT=16
+PARK_API_CELERY_WORKER_COUNT=2
 
 # Caddy
 CADDY_IMAGE=caddy:2.10.0-alpine
