--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -237,13 +237,13 @@ lamassu:
       # Note: doot feeds are accessed via proxy, using http instead of https
       url: "http://gbfs.api.ridedott.com/public/v2/reutlingen/gbfs.json"
       language: en
-    - systemId: dott_schwabisch_gmund
-      operatorId: DOT:Operator:dott
-      operatorName: Dott
-      codespace: DOW
-      # Note: doot feeds are accessed via proxy, using http instead of https
-      url: "http://gbfs.api.ridedott.com/public/v2/schwabisch-gmund/gbfs.json"
-      language: en
+#    - systemId: dott_schwabisch_gmund
+#      operatorId: DOT:Operator:dott
+#      operatorName: Dott
+#      codespace: DOW
+#      # Note: doot feeds are accessed via proxy, using http instead of https
+#      url: "http://gbfs.api.ridedott.com/public/v2/schwabisch-gmund/gbfs.json"
+#      language: en
     - systemId: dott_stuttgart
       operatorId: DOT:Operator:dott
       operatorName: Dott
@@ -285,6 +285,13 @@ lamassu:
       codespace: DOO
       # Note: doot feeds are accessed via proxy, using http instead of https
       url: "http://gbfs.api.ridedott.com/public/v2/mainz/gbfs.json"
+      language: en
+    - systemId: dott_saarbrucken
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOW
+      # Note: doot feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.api.ridedott.com/public/v2/saarbrucken/gbfs.json"
       language: en
     ## Herrenberg cargo bikes
     - systemId: herrenberg_alf
@@ -667,6 +674,13 @@ lamassu:
       codespace: DOQ
       # Note: doot feeds are accessed via proxy, using http instead of https
       url: "http://gbfs.api.ridedott.com/public/v2/bregenz/gbfs.json"
+      language: en
+    - systemId: dott_st_gallen
+      operatorId: DOT:Operator:dott
+      operatorName: Dott
+      codespace: DOX
+      # Note: doot feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.api.ridedott.com/public/v2/st.-gallen/gbfs.json"
       language: en
     - systemId: dott_winterthur
       operatorId: DOT:Operator:dott
