--- a/.env
+++ b/.env
@@ -30,8 +30,8 @@ IPL_POSTGRES_DB=geoserver
 IPL_POSTGRES_USER=geoserver
 
 # x2gbfs variables (Note: when changing the providers, be sure to check if the image version supports them)
-X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2025-08-22T05-03
-X2GBFS_PROVIDERS=deer,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,naturenergie_sharing,stadtwerk_tauberfranken,teilauto_neckar-alb,teilauto_biberach,teilauto_schwaebisch_hall,oekostadt_renningen,gruene-flotte_freiburg,flinkster_carsharing,oberschwabenmobil,gmuend_bewegt,coono,free2move_stuttgart,herrenberg_alf,herrenberg_fare,herrenberg_guelf,herrenberg_stadtrad,lara_to_go,swu2go,mikar,ford_carsharing_autohausbaur
+X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:2025-09-09T06-05
+X2GBFS_PROVIDERS=deer,lastenvelo_fr,stadtmobil_stuttgart,stadtmobil_karlsruhe,stadtmobil_rhein-neckar,naturenergie_sharing,stadtwerk_tauberfranken,teilauto_neckar-alb,teilauto_biberach,teilauto_schwaebisch_hall,oekostadt_renningen,gruene-flotte_freiburg,flinkster_carsharing,oberschwabenmobil,gmuend_bewegt,coono,free2move_stuttgart,herrenberg_alf,herrenberg_fare,herrenberg_guelf,herrenberg_stadtrad,lara_to_go,swu2go,mikar,ford_carsharing_autohausbaur,einfach_unterwegs
 X2GBFS_UPDATE_INTERVAL_SECONDS=60
 
 DEER_API_URL=https://deer.fleetster.de
