chore: prepare switch to new roadworks download url with basic auth

--- a/.env.local.example
+++ b/.env.local.example
@@ -108,8 +108,10 @@ PARK_API_PROJECT_URL=https://api.mobidata-bw.de/park-api
 RADVIS_WFS_USER=user
 RADVIS_WFS_PASSWORD=secret
 
-# SVZBW DATEX2 Download URL
+# SVZBW DATEX2 DOWNLOAD URL, user and password
 ROADWORKS_SVZBW_DATEX2_DOWNLOAD_URL=https://url
+ROADWORKS_SVZBW_DATEX2_DOWNLOAD_USER=user
+ROADWORKS_SVZBW_DATEX2_DOWNLOAD_PASSWORD=secret
 
 # Webcam
 WEBCAM_FTP_SERVER=server
