--- a/etc/park-api/config.yaml
+++ b/etc/park-api/config.yaml
@@ -17,7 +17,7 @@ LOGGING:
   handlers:
     console_stderr:
       class: logging.StreamHandler
-      level: WARNING
+      level: WARN
       formatter: human_readable
       stream: ext://sys.stderr
     split_log_file:
@@ -27,6 +27,7 @@ LOGGING:
       formatter: human_readable
   loggers:
     webapp:
+      level: INFO
       handlers:
         - console_stderr
         - split_log_file
