fix: pgbouncer: switch to bitnamilegacy/pgbouncer:1 image
As outlined in [1], the bitnami/pgbouncer image is unavailable until 2025-09-19T10:00+02:00; It maybe permanently offline some time later. However:

> The Bitnami project continues to make its source available at bitnami/containers under the Apache 2 license; images can be built from source.

Medium-term, we'll want to switch to a different image that still gets patches and is rebuilt with every change.

[1] https://github.com/bitnami/containers/issues/83267#issue-3237062909

--- a/.env
+++ b/.env
@@ -77,7 +77,7 @@ IPL_GTFS_API_COST_LIMIT=3000000
 IPL_GTFS_DB_POSTGREST_USER=postgrest
 
 # pgbouncer variables
-PGBOUNCER_IMAGE=bitnami/pgbouncer:1
+PGBOUNCER_IMAGE=docker.io/bitnamilegacy/pgbouncer:1
 PGBOUNCER_POSTGRES_USER=postgres
 
 # gtfs-api variables
