--- a/.env
+++ b/.env
@@ -77,7 +77,7 @@ IPL_GTFS_API_COST_LIMIT=3000000
 IPL_GTFS_DB_POSTGREST_USER=postgrest
 
 # pgbouncer variables
-PGBOUNCER_IMAGE=docker.io/bitnamilegacy/pgbouncer:1
+PGBOUNCER_IMAGE=ghcr.io/mobidata-bw/pgbouncer:2025-09-23t09.49.20_8f052bd
 PGBOUNCER_POSTGRES_USER=postgres
 
 # gtfs-api variables
