chore: bump redis to latest version and run under local user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -250,7 +250,8 @@ services:
 
   redis:
     networks: [ipl]
-    image: redis:8-alpine
+    user: *local-user
+    image: ${REDIS_IMAGE}
     # Redis tries to use all memory it gets, and doesn't query the container's memory limit.
     # see also https://stackoverflow.com/a/70779280
     # --save '' should explicitly disable saving to volume data, avoiding no space left on devide errors
