--- a/etc/lamassu/feedproviders.yml
+++ b/etc/lamassu/feedproviders.yml
@@ -603,6 +603,17 @@ lamassu:
       # Note: bird feeds are accessed via proxy, using http instead of https
       url: "http://mds.bird.co/gbfs/v2/public/kloten/gbfs.json"
       language: en
+    - systemId: bird-schaffhausen
+      operatorId: BRD:Operator:bird
+      operatorName: bird
+      codespace: BRD
+      # Note: sharedmobility feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/bird-schaffhausen/gbfs"
+      language: en
+      authentication:
+        scheme: HTTP_HEADERS
+        properties:
+          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
     - systemId: bird-zurich
       operatorId: BRD:Operator:bird
       operatorName: bird
@@ -767,6 +778,17 @@ lamassu:
       # Note: nextbike feeds are accessed via proxy, using http instead of https 
       url: "http://gbfs.nextbike.net/maps/gbfs/v2/nextbike_ch/gbfs.json"
       language: en
+    - systemId: nextbike_ms
+      operatorId: NBK:Operator:nextbike
+      operatorName: Nextbike
+      codespace: NBM
+      # Note: sharedmobility feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/nextbike_ms/gbfs"
+      language: en
+      authentication:
+        scheme: HTTP_HEADERS
+        properties:
+          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
     ## PubliBike CH
     - systemId: publibike_ch
       operatorId: PIB:Operator:publibike
@@ -890,6 +912,17 @@ lamassu:
       codespace: CVG
       # Note: sharedmobility feeds are accessed via proxy, using http instead of https
       url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/carvelo2go/gbfs"
+      language: en
+      authentication:
+        scheme: HTTP_HEADERS
+        properties:
+          Authorization: ${LAMASSU_SHAREDMOBILITY_CH_AUTHORIZATION}
+    - systemId: mybuxi_ch
+      operatorId: MBX:Operator:mybuxi
+      operatorName: mybuxi
+      codespace: MBX
+      # Note: sharedmobility feeds are accessed via proxy, using http instead of https
+      url: "http://gbfs.prod.sharedmobility.ch/v2/gbfs/mybuxi_ch/gbfs"
       language: en
       authentication:
         scheme: HTTP_HEADERS
