fix: ipl-db: hard-code linux/amd64 platform
The `docker.io/postgis/postgis` image is amd64-only for now. [1]

[1] https://github.com/postgis/docker-postgis/issues/216

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -271,6 +271,7 @@ services:
   ipl-db:
     networks: [ipl]
     image: ${IPL_POSTGIS_IMAGE}
+    platform: linux/amd64
     volumes:
       - ./var/ipl-db/data:/var/lib/postgresql/data
     environment:
