chore(deps): pgbouncer: upgrade to ghcr.io/mobidata-bw/pgbouncer:2025-10-22T09.46.22_afa4959

--- a/.env
+++ b/.env
@@ -78,7 +78,7 @@ IPL_GTFS_API_COST_LIMIT=3000000
 IPL_GTFS_DB_POSTGREST_USER=postgrest
 
 # pgbouncer variables
-PGBOUNCER_IMAGE=ghcr.io/mobidata-bw/pgbouncer:2025-09-23t09.49.20_8f052bd
+PGBOUNCER_IMAGE=ghcr.io/mobidata-bw/pgbouncer:2025-10-22T09.46.22_afa4959
 PGBOUNCER_POSTGRES_USER=postgres
 
 # gtfs-api variables
