--- a/renovate.json5
+++ b/renovate.json5
@@ -34,6 +34,7 @@
 				"ghcr.io/mobidata-bw/dagster-dagit",
 				"ghcr.io/mobidata-bw/dagster-daemon",
 				"ghcr.io/mobidata-bw/ipl-proxy",
+				"ghcr.io/mobidata-bw/pgbouncer",
 				"ghcr.io/mobidata-bw/postgis-with-pg-plan-filter",
 				"ghcr.io/mobidata-bw/postgis-gtfs-importer",
 				"ghcr.io/mobidata-bw/x2gbfs",
